--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,192 @@
-.App {
-  text-align: center;
+:root {
+  --primary-grey: rgb(186, 184, 184);
+  --primary-brown: rgb(173, 150, 150);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button {
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  color: black;
+  font-size: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dark {
+  background-color: grey;
+}
+
+.light {
+  background-color: white;
+}
+
+.button:hover {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 20px;
+}
+
+.nav-list {
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.nav-list:hover {
+  text-decoration: underline;
+}
+
+.logo {
+  max-width: 70px;
+  width: 100%;
+  max-height: 70px;
+  height: 100%;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  text-align: center;
+}
+
+.first-heading {
+  font-size: 42px;
+  font-weight: lighter;
+  opacity: 70%;
+}
+
+.second-section {
+  font-size: 45px;
+  font-weight: bold;
+  opacity: 90%;
+}
+
+.paragraph {
+  font-size: 24px;
+  font-weight: bold;
+  opacity: 60%;
+}
+
+.card-link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.card-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.card-description {
+  font-size: 16px;
+  font-weight: bold;
+  opacity: 60%;
+}
+
+.content-card {
+  max-width: 400px;
+  width: 100%;
+  /* border-top: 5px solid red; */
+  box-shadow: 0 0 20px rgb(206, 226, 243);
+  border-radius: 10px;
+  padding: 40px 40px 100px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: flex-start;
+  gap: 10px;
+  position: relative;
+}
+
+.red {
+  border-top: 5px solid red;
+}
+
+.yellow {
+  border-top: 5px solid yellow;
+}
+
+.green {
+  border-top: 5px solid green;
+}
+
+.orange {
+  border-top: 5px solid orange;
+}
+
+.card-img {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.main {
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  /* flex-wrap: wrap; */
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.footer {
+  background-color: lightslategray;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 40px 0;
+}
+
+
+@media  (max-width:768px) {
+  .main {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .paragraph {
+    padding: 20px;
+  }
+
+  .header {
+    padding: 20px;
+  }
+}
+
+@media  (max-width:375px) {
+  .header {
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
   }
 }
